Closed
Bug 611296
Opened 10 years ago
Closed 10 years ago
QuickTime plugin not recognized for some Mac OS X users
Categories
(Core :: Plug-ins, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | betaN+ |
People
(Reporter: neilco, Assigned: jaas)
References
Details
(Keywords: regression, Whiteboard: [hardblocker])
Attachments
(3 files, 1 obsolete file)
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_4; en-us) AppleWebKit/533.18.1 (KHTML, like Gecko) Version/5.0.2 Safari/533.18.5 Build Identifier: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b7) Gecko/20100101 Firefox/4.0b7 Mac OS X 10.6.4: Firefox reports that the QuickTme plugin is missing when trying to view an embedded video. QuickTime X is present and functioning. For example: visit http://www.mediacollege.com/video/format/quicktime/streaming/example.html to see the issue. Reproducible: Always Steps to Reproduce: 1. Visit http://www.mediacollege.com/video/format/quicktime/streaming/example.html 2. Note missing plugin Actual Results: QuickTime plugin is missing despite QuickTime being present and functioning in the host system. Expected Results: QuickTime plugin loads and video can be played.
Comment 1•10 years ago
|
||
I'm unable to reproduce this problem using 4b7 and the latest nightly 4.0b8pre, and QT 7.6.6 on 10.6.5. On a different machine running 10.6.4, it took a while to load, several seconds, but eventually it loaded.
Reporter | ||
Comment 2•10 years ago
|
||
I get the same result using the latest nightly build.
Reporter | ||
Comment 3•10 years ago
|
||
Updated•10 years ago
|
Comment 4•10 years ago
|
||
Neil, could you try the following? Go into your profile (~/Library/Application Support/Firefox/Profiles/<your profile>) and remove pluginreg.dat, then restart Firefox and try it again.
I have the same problem since the update from b6 -> b7. Everything works fine with Safari, but Firefox is unable to play any QuickTime Video. Also on a side note: Quicktime isn't listed in the Plugin list of Firefox. It seems that Firefox doesn't find the Quicktime Player. Does Firefox need Quicktime to be in a certain folder?
Reporter | ||
Comment 6•10 years ago
|
||
Removing pluginreg.dat and restarting Firefox has no effect. Problem still persists. I checked the contents of pluginreg.dat and there's no entry for the QuickTime plugin.
Reporter | ||
Comment 7•10 years ago
|
||
I've tried using the QuickTime pluginreg.dat entries from a different Mac running 3.6.12 where the QT plugin is loaded just fine. It appears the QT entries are being flushed from the cache when a page attempts to load the plugin.
Comment 8•10 years ago
|
||
Do you have a preference file located at ~/Library/Preferences/com.apple.quicktime.plugin.preferences.plist (it should be created by the quicktime plugin)?
Reporter | ||
Comment 9•10 years ago
|
||
Yes, I do.
Comment 10•10 years ago
|
||
Given that clearing out the pluginreg.dat does not fix the problem, bug 611197 will not help.
No longer depends on: 611197
Comment 12•10 years ago
|
||
http://www.apple.com/trailers not working for me using Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b8pre) Gecko/20101121 Firefox/4.0b8pre about:plugins doesn't have a trace of the Quicktime Plugin, which is odd, because I know I've watched trailers there a while ago! Other interesting info: OSX 10.6.5, iTunes 10.1 (58), QuickTime 10.0 (118)
blocking2.0: --- → beta8+
Whiteboard: DUPEME
Comment 13•10 years ago
|
||
Morphing slightly, since I can confirm that the QT plugin is also just plain missing when trying to view .mov files directly: ex: http://people.mozilla.org/~beltzner/bugzilla_lose_comment_for_bz.mov
Summary: QuickTime plugin identified missing when browsing page with embedded video → QuickTime plugin has gone missing (was only: when browsing page with embedded video)
Updated•10 years ago
|
Assignee: sgreenlay → nobody
Component: General → Plug-ins
Product: Firefox → Core
QA Contact: general → plugins
Version: unspecified → Trunk
Comment 14•10 years ago
|
||
Can someone try to find a regression range ? You have just to look in about:plugins if qt is found.
Comment 15•10 years ago
|
||
Is this a general plugin issue? I'm seeing similar w/ Silverlight, somehow.
Assignee | ||
Comment 16•10 years ago
|
||
For the people who can reproduce this problem with Quicktime - do you have Flip4Mac or other Windows Media components for Quicktime installed? Can anyone with Flip4Mac or other Windows Media components for Quicktime installed *not* reproduce this problem?
Comment 17•10 years ago
|
||
Confirm that Flip4Mac is on my system, and I am experiencing this issue.
Comment 18•10 years ago
|
||
I cannot reproduce the problem on the latest nightly, with the examples listed in comment #0 and comment #13. I have Flip4Mac (2.3.0.14) and QT (7.6.6) listed in about:plugins.
Reporter | ||
Comment 19•10 years ago
|
||
I can reproduce the issue both with and without Flip4Mac v2.3.5.4 (no Silverlight plugin).
Comment 20•10 years ago
|
||
Silverlight problems are unrelated, see bug 598406.
Component: Plug-ins → General
Product: Core → Firefox
Version: Trunk → unspecified
Comment 21•10 years ago
|
||
I tried to find the regression range and found that this is exclusive to 64bit builds. The earliest 64bit build I could find was at: ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010/04/2010-04-08-03-mozilla-central/firefox-3.7a5pre.en-US.mac64.dmg The bug exists in that build. The latest 32bit build I could find was at: ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010/09/2010-09-26-03-mozilla-central/firefox-4.0b7pre.en-US.mac.dmg The bug does exist in that build (it sees QT). I do not have flip4mac. I do not recall ever downloading Windows Media components for QT. I do have VLC installed, if that helps. Using OS 10.6.5. QT 10.0 (118).
Updated•10 years ago
|
Component: General → Plug-ins
Product: Firefox → Core
Version: unspecified → Trunk
Summary: QuickTime plugin has gone missing (was only: when browsing page with embedded video) → QuickTime plugin not loading properly (unavailable) for some Mac OS X users
Reporter | ||
Comment 22•10 years ago
|
||
I can confirm that the bug is specific to 64-bit builds. Launching 4.0b7 64-bit in 32-bit mode successfully loads the QT plugin and embedded videos can be viewed.
Updated•10 years ago
|
Summary: QuickTime plugin not loading properly (unavailable) for some Mac OS X users → QuickTime plugin not loading properly (unavailable) for 64-bit Mac OS X users
Updated•10 years ago
|
blocking2.0: beta8+ → beta9+
Updated•10 years ago
|
Keywords: regression
Comment 23•10 years ago
|
||
As per today's meeting, beta 9 will be a time-based release. Marking these all betaN+. Please move it back to beta9+ if you believe it MUST be in the next beta (ie: trunk is in an unshippable state without this)
blocking2.0: beta9+ → betaN+
Keywords: regression
Comment 24•10 years ago
|
||
Fixing fields my automated script accidentally blanked. Apologies for the bugspam
Keywords: regression
Assignee | ||
Comment 25•10 years ago
|
||
I figured out the problem by remotely debugging on a machine that could repro (thanks Ehsan!). When we're parsing a MIME types plist file we get the listed locale and compare it against the current locale (see "ParsePlistForMIMETypesFilename" in "nsPluginsDirDarwin.cpp"). If they don't match we bail and then since we didn't find any MIME types the plugin gets listed as invalid. A quick fix is to just not look at the locale at all - we don't actually use it for anything. I think what WebKit used to do and might still do is compare the locale in the plist against the current locale and if they don't match then request that the plugin regenerate the file via the extern C function "BP_CreatePluginMIMETypesPreferences". I don't know if this is still the right thing to do but we should eventually figure out what the right thing to do is and do it. I think just ignoring the locale is probably enough for now, we can file another bug for locale-based file regeneration and decide in that bug whether or not it needs to block 2.0 (I doubt it).
Summary: QuickTime plugin not loading properly (unavailable) for 64-bit Mac OS X users → QuickTime plugin not recognized for some Mac OS X users
Assignee | ||
Comment 26•10 years ago
|
||
I haven't actually tested this yet but it is pretty simple. Running through try server now and then I'll have someone affected by this bug verify the fix.
Attachment #501591 -
Flags: review?(scott)
Assignee | ||
Comment 27•10 years ago
|
||
We also need to force a pluginreg.dat refresh to remove Quicktime from the invalid plugins list.
Attachment #501591 -
Attachment is obsolete: true
Attachment #501671 -
Flags: review?(scott)
Attachment #501591 -
Flags: review?(scott)
Comment 28•10 years ago
|
||
Comment on attachment 501671 [details] [diff] [review] fix v1.1 Looks good to me.
Attachment #501671 -
Flags: review?(scott) → review+
Updated•10 years ago
|
Whiteboard: [hardblocker]
Comment 29•10 years ago
|
||
I tested this build <http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/josh@mozilla.com-6d0114fffc72/try-osx64/firefox-4.0b9pre.en-US.mac64.dmg> on a machine which has this problem, and the problem seems to be fixed by this patch.
Assignee | ||
Comment 30•10 years ago
|
||
pushed to mozilla-central http://hg.mozilla.org/mozilla-central/rev/1ac9f1ffbafb
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Comment 31•10 years ago
|
||
I tried to reproduce this for verification purposes, but no dice. The build candidates for beta 10 also don't show this problem in the couple of machines I tried, but comment #29 is evidence this should be ok.
You need to log in
before you can comment on or make changes to this bug.
Description
•