Bug 611296: Fix bug that caused the Quicktime plugin to fail to load for some Mac OS X users. Don't require that the MIME plist locale match the current locale. r=sgreenlay a=blocking2.0betaN+